# polyanya

./: -  .gitignore  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  example-mesh.aseprite  release-plz.toml
.github/workflows/: ci.yml  codspeed.yml  release.yml
benches/: baking.rs  is_in_mesh.rs  merger.rs  no_path.rs  path.rs  recast.rs  triangulation.rs
examples/: aurora.rs  scenario_runner.rs  tests-aurora-merged.rs  tests-aurora.rs
examples/traced/: Cargo.toml
meshes/: arena.mesh  aurora.mesh
meshes/recast/: detail_mesh.json  poly_mesh.json
meshes/v2/: LICENSE  arena-merged.mesh  aurora-merged.mesh  format.txt
meshes/v3/: attribution.txt  cube.mesh  format.txt  scene_mp_2p_01.mesh  scene_mp_2p_01.mesh.scen
scenarios/: aurora.scen
src/: async_helpers.rs  conversion.rs  helpers.rs  instance.rs  layers.rs  lib.rs  merger.rs  mesh_cleanup.rs  performance_tests.rs  primitives.rs  stitching.rs  trimesh.rs
src/input/: mod.rs  polyanya_file.rs  recast.rs  triangulation.rs  trimesh.rs
src/vendored_spade/: cdt.rs  delaunay_triangulation.rs  flood_fill_iterator.rs  intersection_iterator.rs  mod.rs  point.rs  triangulation.rs
src/vendored_spade/delaunay_core/: bulk_load.rs  bulk_load_fuzz_tests.rs  dcel.rs  dcel_operations.rs  hint_generator.rs  interpolation.rs  line_side_info.rs  math.rs  mod.rs  refinement.rs  triangulation_ext.rs
src/vendored_spade/delaunay_core/handles/: handle_defs.rs  handle_impls.rs  public_handles.rs
src/vendored_spade/delaunay_core/handles/iterators/: fixed_iterators.rs  hull_iterator.rs
tests/: arena-file.rs  arena-merged.rs  arena-triangulation.rs  arena.rs  aurora-merged.rs  aurora.rs  harmonia.rs  mesh-v3.rs  recast.rs  triangulation.rs
