[package]
name = "polyanya"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["pathfinding"]
readme = "README.md"
description = "Polygon Any Angle Pathfinding"
repository = "https://github.com/vleue/polyanya"
homepage = "https://github.com/vleue/polyanya"
documentation = "https://docs.rs/polyanya"
categories = ["game-development"]

[features]
default = ["async"]
stats = []
verbose = []
async = []
no-default-baking = []
serde = ["glam/serde", "bvh2d/serde", "dep:serde"]

[dependencies]
tracing = { version = "0.1", optional = true }
hashbrown = { version = "0.14" }
glam = { version = "0.25", features = ["approx"] }
smallvec = { version = "1.9", features = ["union", "const_generics"] }
bvh2d = { version = "0.4", git = "https://github.com/mockersf/bvh2d" }
serde = { version = "1.0", features = ["derive"], optional = true }
spade = "2.2"
geo = "0.26.0"
log = "0.4"

[dev-dependencies]
criterion = "0.5"
tracing-tracy = "0.10"
tracing-subscriber = "0.3"
tracing = "0.1"

[workspace]
members = ["examples/traced"]

[lib]
bench = false

[[bench]]
name = "path"
harness = false

[[bench]]
name = "no_path"
harness = false

[[bench]]
name = "is_in_mesh"
harness = false

[[bench]]
name = "baking"
harness = false

[[bench]]
name = "triangulation"
harness = false

[[bench]]
name = "merger"
harness = false
