[package]
name = "traced"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyanya = { path = "../../", features = ["tracing"] }
glam = "0.30"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"
tracing = "0.1"
